[gd_scene load_steps=13 format=2]

[ext_resource path="res://assests/sprites/bg/2592336.jpg" type="Texture" id=1]
[ext_resource path="res://ModeAssets/topic_mode.png" type="Texture" id=2]
[ext_resource path="res://ModeAssets/สระ.png" type="Texture" id=3]
[ext_resource path="res://ModeAssets/พยัญชนะไทย.png" type="Texture" id=4]
[ext_resource path="res://ModeAssets/ประสม.png" type="Texture" id=5]
[ext_resource path="res://ตกแต่ง/blackboard.png" type="Texture" id=6]
[ext_resource path="res://Scenes/LearnMode.gd" type="Script" id=7]
[ext_resource path="res://ตกแต่ง/maple-leaf.png" type="Texture" id=8]
[ext_resource path="res://assests/backButt .png" type="Texture" id=9]
[ext_resource path="res://assests/nextButt.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/ตกแต่ง1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 296, 88 ), Vector2( 296, 88 ), Vector2( 296, 88 ), Vector2( 296, 88 ), Vector2( 296, 88 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/ตกแต่ง1:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -6.23651, -0.963558, 6.56797, -0.138023 ]
}

[sub_resource type="Animation" id=2]
resource_name = "move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer2/ตกแต่ง2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 720, 80 ), Vector2( 720, 80 ), Vector2( 720, 80 ), Vector2( 720, 80 ), Vector2( 720, 80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer2/ตกแต่ง2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -8.34086, 3.60969, 13.0551, 0.0 ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 7 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 608, 248 )
scale = Vector2( 0.410234, 0.41791 )
texture = ExtResource( 1 )

[node name="logo" type="Sprite" parent="."]
position = Vector2( 528, 80 )
scale = Vector2( 0.344988, 0.344988 )
texture = ExtResource( 2 )

[node name="payun" type="TextureButton" parent="."]
margin_left = 172.0
margin_top = 172.0
margin_right = 482.0
margin_bottom = 504.0
rect_scale = Vector2( 0.699617, 0.699617 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sara" type="TextureButton" parent="."]
margin_left = 406.0
margin_top = 180.0
margin_right = 898.0
margin_bottom = 687.0
rect_scale = Vector2( 0.43958, 0.43958 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prasom" type="TextureButton" parent="."]
margin_left = 630.0
margin_top = 178.0
margin_right = 1129.0
margin_bottom = 685.0
rect_scale = Vector2( 0.457892, 0.457892 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move = SubResource( 1 )

[node name="ตกแต่ง1" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 296, 88 )
scale = Vector2( 0.212466, 0.212466 )
texture = ExtResource( 6 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/move = SubResource( 2 )

[node name="ตกแต่ง2" type="Sprite" parent="AnimationPlayer2"]
position = Vector2( 720, 80 )
scale = Vector2( 0.159585, 0.159585 )
texture = ExtResource( 8 )

[node name="backButton" type="TextureButton" parent="."]
margin_left = 72.0
margin_top = 480.0
margin_right = 429.0
margin_bottom = 817.0
rect_scale = Vector2( 0.219792, 0.219792 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextButton" type="TextureButton" parent="."]
margin_left = 880.0
margin_top = 480.0
margin_right = 1237.0
margin_bottom = 817.0
rect_scale = Vector2( 0.212832, 0.212832 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="payun" to="." method="_on_payun_pressed"]
[connection signal="pressed" from="sara" to="." method="_on_sara_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
